<resources>
    <string name="app_name">TaskerNative</string>
    <string name="action_logout">Log out</string>
    <string name="add_task_activity_title">Task Constructor</string>
    <string name="add_new_task">Add new task</string>
    <string name="input_title">Input title</string>
    <string name="input_description">Input description</string>
    <string name="send">Send</string>
    <string name="task_details_title">Task Details</string>
    <string name="task_id">Task Id:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_title">Sign In</string>
</resources>
