<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsActivity">

    <TextView
        android:id="@+id/taskid_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/task_id"
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskid_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"

        android:text=""
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/taskid_header"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/title_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/taskid_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/title_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/title_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/description_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textAppearance=
            "@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/description_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>